--- a/references.bib
+++ b/references.bib
@@ -13,121 +13,12 @@
     type         = {Выпускная квалификационная работа}
 }
 
-@online{CitrusRepo,
-    title        = {Citrus Game Engine repository},
-    organization = {GameForest},
-    url          = {https://github.com/game-forest/Citrus},
-    urldate      = {14.06.2019},
-    language     = {english},
-}
-
-@online{SGFSite,
-	title        = {Studio Game Forest},
-	organization = {GameForest},
-	url          = {https://game-forest.com/},
-    language     = {russian},
-}
-
-@online{TexturePacker,
-    title        = {TexturePacker},
-    organization = {CodeAndWeb GmbH},
-    url          = {https://www.codeandweb.com/texturepacker},
-    urldate      = {20.01.2021},
-    language     = {english},
-}
-
 @online{PlayrixArticle,
     title        = {Как оптимизировать игру с помощью полигональных атласов},
     organization = {Playrix},
     url          = {https://habr.com/ru/company/playrix/blog/306554/},
     urldate      = {20.01.2021},
     language     = {russian},
-}
-
-@online{Spine,
-    title        = {Spine in depth},
-    organization = {Esoteric Software},
-    url          = {http://esotericsoftware.com/spine-in-depth},
-    urldate      = {20.01.2021},
-    language     = {english},
-}
-
-@article{Heuristic1,
-    title        = {An Efficient Heuristic Approach for Irregular Cutting Stock Problem in Ship Building Industry},
-    author       = {Yan-xin Xu},
-    language     = {english},
-}
-
-@article{Heuristic2,
-    title        = {Matheuristics for the irregular bin packing problem with free rotations},
-    author       = {A. Martinez-Sykora and R. Alvarez-Valdes and J. A. Bennel and R. Ruiz and J. M. Tamarit b},
-    language     = {english},
-}
-
-@article{Heuristic3,
-    title        = {An effective heuristic for the two-dimensional irregular bin packing problem},
-    author       = {Eunice López-Camacho and Gabriela Ochoa and Hugo Terashima-Marín and Edmund K. Burke},
-    language     = {english},
-}
-
-@article{NFP1,
-    title        = {Algorithms for 2D Nesting Problem Based on the No-Fit Polygon},
-    author       = {D. Domović and T. Rolich and D. Grundler and S. Bogović},
-    language     = {english},
-}
-
-@article{NFP2,
-    title        = {Irregular Packing for Mobile Game Texture Atlases},
-    author       = {Jarkko Pöyry},
-    language     = {english},
-}
-
-@article{Genetica1,
-    title        = {On genetic algorithms for the packing of polygons},
-    author       = {Stefan Jakobs},
-    language     = {english},
-}
-
-@article{PSO1,
-    title        = {Ant Colony Optimisation and Local Search for Bin Packing and Cutting Stock Problems},
-    author       = {John Levine and Frederick Ducatelle},
-    language     = {english},
-}
-
-@article{PSO2,
-    title        = {Effectiveness of FireFly Algorithm in solving Bin Packing Problem},
-    author       = {R.yesodha and T.Amudha},
-    language     = {english},
-}
-
-@article{TheoPavlidis,
-    title        = {Algorithms for Graphics and Image Processing},
-    author       = {Pavlidis, T.},
-    language     = {english},
-}
-
-@article{MoorNeighbor,
-    title        = {Grids, Connectivity and Contour Tracing},
-    author       = {Toussaint, G.},
-    language     = {english},
-}
-
-@article{RadialSweep,
-    title        = {Algorithms for Graphics and Image Processing},
-    author       = {Reddy, P.R. and Amarnadh, V. and Bhaskar, M},
-    language     = {english},
-}
-
-@article{RunTypeDirectionCode,
-    title        = {Contour representation of binary images using run-type direction codes},
-    author       = {Miyatake, T. and Matsushima, H. and Ejiri, M.},
-    language     = {english},
-}
-
-@article{RunTypeDirectionCode,
-    title        = {Contour following and reconstruction of binary images stored in run format},
-    author       = {Shoji, K. and Miyamichi, J. and Hirano, K},
-    language     = {english},
 }
 
 @article{DouglasPeucker,
@@ -208,46 +99,43 @@
     pages        = {214--223}
 }
 
-@article{ReumannWitkam,
-  author          = {Reumann, K. and Witkam, A.},
-  title           = {Optimizing curve segmentation in computer graphics},
+@inproceedings{ReumannWitkam,
+    author       = {Reumann, K. and Witkam, A.},
+    title        = {Optimizing curve segmentation in computer graphics},
+    year         = {1974},
+    pages        = {467-472},
+    language     = {english},
 }
 
 @misc{ThousandWayToPackBin,
-    author        = {Jukka Jylänki},
-    title         = {A thousand ways to pack the bin -- a practical approach to two-dimensional rectangle bin packing },
-    year          = {2010}
+    author       = {Jukka Jylänki},
+    title        = {A thousand ways to pack the bin -- a practical approach to two-dimensional rectangle bin packing },
+    year         = {2010}
 }
 
 @InProceedings{NofitPolygon,
-    author        ="Burke, Edmund and Kendall, Graham",
-    editor        ="Parmee, I. C.",
-    title         ="A New Approach to Packing Non-Convex Polygons Using the No Fit Polygon and Meta-Heuristic and Evolutionary Algorithms",
-    booktitle     ="Adaptive Computing in Design and Manufacture V",
-    year          ="2002",
-    publisher     ="Springer London",
-    address       ="London",
-    pages         ="193--204",
-    abstract      ="Earlier work by the authors has presented a method for packing convex polygons, using a construction known as the no fit polygon. Although the method was shown to be successful, it could only deal with convex polygons. This paper addresses the issue by showing how a non-convex, no fit polygon algorithm can (and should) produce better quality solutions. We demonstrate the approach on two test problems that the authors have used in previous work. The new algorithm does, however, have an increased computational complexity. We tackle this by presenting an algorithm that allows the non-convex, no fit polygon to be approximated. This means that much more of the search space can be considered and computational results show that better quality solutions can be achieved, in less time than when using the full no fit polygon algorithm.",
-    isbn          ="978-0-85729-345-9"
+    author        = "Burke, Edmund and Kendall, Graham",
+    editor        = "Parmee, I. C.",
+    title         = "A New Approach to Packing Non-Convex Polygons Using the No Fit Polygon and Meta-Heuristic and Evolutionary Algorithms",
+    booktitle     = "Adaptive Computing in Design and Manufacture V",
+    year          = "2002",
+    publisher     = "Springer London",
+    address       = "London",
+    pages         = "193--204",
+    abstract      = "Earlier work by the authors has presented a method for packing convex polygons, using a construction known as the no fit polygon. Although the method was shown to be successful, it could only deal with convex polygons. This paper addresses the issue by showing how a non-convex, no fit polygon algorithm can (and should) produce better quality solutions. We demonstrate the approach on two test problems that the authors have used in previous work. The new algorithm does, however, have an increased computational complexity. We tackle this by presenting an algorithm that allows the non-convex, no fit polygon to be approximated. This means that much more of the search space can be considered and computational results show that better quality solutions can be achieved, in less time than when using the full no fit polygon algorithm.",
+    isbn          = "978-0-85729-345-9"
 }
 
 @INPROCEEDINGS{NofitPolygon2,
-  author          ={Domovic, D. and Rolich, T. and Grundler, D. and Bogovic, S.},
-  booktitle       ={2014 37th International Convention on Information and Communication Technology, Electronics and Microelectronics (MIPRO)},
-  title           ={Algorithms for 2D nesting problem based on the no-fit polygon},
-  year            ={2014},
-  volume          ={},
-  number          ={},
-  pages           ={1094-1099},
-  doi             ={10.1109/MIPRO.2014.6859732}
+    author        = {Domovic, D. and Rolich, T. and Grundler, D. and Bogovic, S.},
+    booktitle     = {2014 37th International Convention on Information and Communication Technology, Electronics and Microelectronics (MIPRO)},
+    title         = {Algorithms for 2D nesting problem based on the no-fit polygon},
+    year          = {2014},
+    volume        = {},
+    number        = {},
+    pages         = {1094-1099},
+    doi           = {10.1109/MIPRO.2014.6859732}
  }
-
-@inproceedings{Fogel1993OnGA,
-  title           ={On genetic algorithms for the packing of polygons},
-  author          ={L. Fogel},
-  year            ={1993}
-}
 
 @article{FireFly,
     author        = {Yesodha, R. and Amudha, T},
@@ -272,17 +160,17 @@
 }
 
 @inproceedings{PSO,
-  TITLE           = {{Bin Packing Problem with priorities and incompatibilities using PSO: application in a health care community}},
-  AUTHOR          = {Laurent, Arnaud and Klement, Nathalie},
-  URL             = {https://hal.archives-ouvertes.fr/hal-02329525},
-  BOOKTITLE       = {{9th IFAC Conference on Manufacturing Modelling, Management and Control}},
-  ADDRESS         = {Berlin, Germany},
-  PAGES           = {2744-2749},
-  YEAR            = {2019},
-  MONTH           = Aug,
-  PDF             = {https://hal.archives-ouvertes.fr/hal-02329525/file/LISPEN_MIM_2019_KLEMENT.pdf},
-  HAL_ID          = {hal-02329525},
-  HAL_VERSION     = {v1},
+    title         = {{Bin Packing Problem with priorities and incompatibilities using PSO: application in a health care community}},
+    author        = {Laurent, Arnaud and Klement, Nathalie},
+    url           = {https://hal.archives-ouvertes.fr/hal-02329525},
+    booktitle     = {{9th IFAC Conference on Manufacturing Modelling, Management and Control}},
+    address       = {Berlin, Germany},
+    pages         = {2744-2749},
+    year          = {2019},
+    month         = Aug,
+    pdf           = {https://hal.archives-ouvertes.fr/hal-02329525/file/LISPEN_MIM_2019_KLEMENT.pdf},
+    hal_id        = {hal-02329525},
+    hal_version   = {v1},
 }
 
 @article{JAKOBS1996165,
