--- a/thesis.tex
+++ b/thesis.tex
@@ -249,7 +249,7 @@
 
     На стадии инициализации создаются две модели множества полигонов. Первая модель это дерево полигонов, где каждый узел дерева это полигон $P_i$, представленный двусвязным зацикленным списком вершин $P_i = \left(v_j\right)_{j=0}^{n - 1}$, $v_{j \pm m}$ подразумевает $v_{j \pm m \pmod n}$. Корнем дерева является ограничивающая рамка ($frame$). Вторая модель ($topology$) это триангуляция Делоне с ограничениями. В реализации алгоритма использовался пакет, разработанный в рамках бакалаврской выпускной квалификационной работы \cite{Delaunay}. Триангуляция Делоне это мощнейший инструмент для проверки преобразований над полигонами, а также вычисления полигона видимости. Также на стадии инициализации происходит подсчет минимальной возможной трансформации для каждой вершины. "Стоимость" трансформации измеряется в добавочной площади. Для быстрого поиска минимальной трансформации (т.е. трансформации с минимальной стоимостью) используется сбалансированное дерево поиска ($minExtractor$).
 
-    Далее выполняются преобразования или мерджатся полигоны, пока не условие выхода не будет достигнуто. Процедура $RetrieveImage$ возвращает объект типа $Image$. $Image$ содержит в себе все вершины и индексных массив (массив троек индексов вершин), а также массив объектов типа $ImageObject$. Объектом картинки называется граничный контур со всеми принадлежащими ему дырами. $ImageObject$ содержит в себе индексы вершин для контура и всех дыр, а также индексы троек индексов, ему принадлежащих. Данные структуры данных в дальнейшем используются для упаковки.
+    Далее выполняются преобразования или сливаются полигоны, пока не условие выхода не будет достигнуто. Процедура $RetrieveImage$ возвращает объект типа $Image$. $Image$ содержит в себе все вершины и индексных массив (массив троек индексов вершин), а также массив объектов типа $ImageObject$. Объектом картинки называется граничный контур со всеми принадлежащими ему дырами. $ImageObject$ содержит в себе индексы вершин для контура и всех дыр, а также индексы троек индексов, ему принадлежащих. Данные структуры данных в дальнейшем используются для упаковки.
 
     \subsubsection{Преобразования над вершинами}
     Стоимостью преобразования является добавляемая площадь площадь, которая представляет из себя один или два треугольника. Возможность преобразования проверяется путем вставки в триангуляцию структурных ребер и проверки на существование определенного треугольника. Данная проверка необходима для того, чтобы избежать случаев, когда какая-то другая граница попадает в добавочную площадь.
@@ -280,8 +280,6 @@
     \end{figure}
 
     \paragraph{Выгибание соседней вершины}
-    Данное преобразование является оптимизированной версией удаления вогнутого угла. Если линия, образованная предыдущей и пред предыдущей вершинами, пересекает сторону, образованную текущей и следующей вершинами, то существует возможность заменить предыдущую и текущую вершины пересечением линии и стороны. Аналогично для четверки следующая, последующая, текущая и предыдущая вершин.
-
     Данное преобразование является оптимизированной версией удаления вогнутого угла. Если $\gline{v_{i - 2}v_{i - 1}}$ пересекает $\gsegment{v_iv_{i + 1}}$, то можно не отрезать весь угол, а заменить $v_{i - 1}$ и $v_{i}$ пересечением. Аналогично работает для $\gline{v_{i + 2}v_{i + 1}}$ и $\gsegment{v_iv_{i - 1}}$.
 
     \begin{figure}[H]
@@ -306,19 +304,19 @@
         \caption{Удаление треугольной дыры}
     \end{figure}
 
-    \subsubsection{Мердж полигонов}
-    В каждой полигональной дыре (включая $frame$) выбирается 2 пары последовательных вершин из разных полигонов, которые образуют минимальный четырехугольник, который не пересекает другие стороны. Данные 4 вершины являются точками мерджа.
+    \subsubsection{Слияние полигонов}
+    В каждой полигональной дыре (включая $frame$) выбирается 2 пары последовательных вершин из разных полигонов, которые образуют минимальный четырехугольник, который не пересекает другие стороны. Данные 4 вершины являются точками слияния.
     \begin{figure}[H]
         \centering
         \begin{subfigure}[t]{\linewidth}
             \centering
             \includegraphics[scale=1]{images/polygonmerge.png}
-            \caption{Мердж границы с дырой}
+            \caption{Слияние границы с дырой}
         \end{subfigure}
         \begin{subfigure}[t]{\linewidth}
             \centering
             \includegraphics[scale=1]{images/polygonmerge2.png}
-            \caption{Мердж границы с границей}
+            \caption{Слияние границы с границей}
         \end{subfigure}
     \end{figure}
 
@@ -443,7 +441,7 @@
             \While{$current \leq m$}
                 \While{$r \leq a_i$}
                     \State $parents_i \gets popoluation_i$
-                    \State $r \gets 4 + 1 / m$
+                    \State $r \gets r + 1 / m$
                     \State $current \gets current + 1$
                 \EndWhile
                 \State $i \gets i + 1$
