Add info about merge via visibility polygons comparison

--- a/references.bib
+++ b/references.bib
@@ -367,3 +367,27 @@ clipping and offsetting lines and polygons},
     language     = {english},
     author       = {Erin Catto},
 }
+
+@article{TriangularExpansion,
+  author    = {Francisc Bungiu and Michael Hemmer and John Hershberger and Kan Huang and Alexander Kr{\"{o}}ller},
+  title     = {Efficient Computation of Visibility Polygons},
+  journal   = {CoRR},
+  volume    = {abs/1403.3905},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1403.3905},
+  archivePrefix = {arXiv},
+  eprint    = {1403.3905},
+  timestamp = {Mon, 13 Aug 2018 16:46:45 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/BungiuHHHK14.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Asano,
+  author          = {Asano Tetsuo},
+  title           = {An Efficient Algorithm for Finding the Visibility Polygon for a Polygonal Region with Holes},
+  journal         = {IEICE TRANSACTIONS (1976-1990)},
+  volume          = {E68},
+  number          = {9},
+  year            = {1985},
+  pages           = {557-559},
+}
