--- a/thesis.tex
+++ b/thesis.tex
@@ -306,6 +306,7 @@
 
     \subsubsection{Слияние полигонов}
     В каждой полигональной дыре (включая $frame$) выбирается 2 пары последовательных вершин из разных полигонов, которые образуют минимальный четырехугольник, который не пересекает другие стороны. Данные 4 вершины являются точками слияния.
+
     \begin{figure}[H]
         \centering
         \begin{subfigure}[t]{\linewidth}
@@ -319,6 +320,28 @@
             \caption{Слияние границы с границей}
         \end{subfigure}
     \end{figure}
+
+    Нахождение пар точек для потенциального слияния осуществляется с помощью сопоставления полигонов видимости. На рисунке \ref{VP} показаны полигоны видимости двух соседних вершин. Красным отмечена вершина запроса. Фиолетовым отмечены интересующие нас вершины, через которые можно потенциально слить полигоны. Серым отмечены либо вершины, принадлежащие тому же полигону, что и вершина запроса, либо точки, не являющиеся вершинами полигона.
+
+    \begin{figure}[H]
+        \centering
+        \begin{subfigure}[t]{0.49\linewidth}
+            \centering
+            \includegraphics[scale=0.5]{images/visibility_polygon_current_vertex.png}
+            \caption{Полигон видимости текущей вершины}
+        \end{subfigure}
+        \begin{subfigure}[t]{0.49\linewidth}
+            \centering
+            \includegraphics[scale=0.5]{images/visibility_polygon_prev_vertex.png}
+            \caption{Полигон видимости предыдущей вершины}
+        \end{subfigure}
+        \caption{Полигоны видимости соседних вершин}
+        \label{VP}
+    \end{figure}
+
+    Пусть у нас есть вершины 2 последовательные вершины $prev$ и $current$ некоторого полигона $P$. Также для них известны полигоны видимости $V_{prev}$ и $V_{current}$. Тогда для каждой точки $q \in V_{current}$, являющийся вершиной полигона, но $q \notin P$, необходимо проверить, $next\left(q\right) \in V_{prev}$. Если $next\left(q\right) \in V_{prev}$ значит 2 полигона можно слить через вершины $prev, next\left(q\right), q, current$ (проверив при этом отсутствие самопересечений). Запрос о нахождении точки в полигоне видимости можно выполнить за $O\left(\log \left|V\right|\right)$ при помощи бинарного поиска, так как вершины полигона видимости отсортированы по полярному углу относительно точки запроса.
+
+    В данной работе был реализован Triangular expansion\cite{TriangularExpansion} алгоритм для нахождения полигона видимости в триангуляции. Данный алгоритм для точки запроса $q$ в полигоне $P$ сначала находит треугольник, содержащий точку. Очевидно, что $q$ видит весь треугольник и к полигону видимости можно добавить все ребра, которые принадлежат $\delta P$. Для всех других ребер вызывается рекурсивная процедура, которая расширяет поле зрения $q$ через ребро. Изначально поле зрения q ограничивается концами ребра, однако, по мере углубления в рекурсию, поле зрение может быть дополнительно ограничено. Алгоритм затрачивает $O\left(nh\right)$ времени и $O\left(n\right)$ памяти, где $h$ это количество дыр. Но на практике алгоритм часто затрачивает сублинейное время, так как затрагивает только треугольники, которые на самом деле видны.
 
     \subsubsection{Применение преобразований}
     На каждой итерации цикла применяется аппроксимирующее преобразование с минимальной стоимостью. После применения преобразования пересчитываются преобразования соседних вершин.
